RESOLVED FIXED31812
WebSocket code uses RefPtr::get() where it shouldn't
https://bugs.webkit.org/show_bug.cgi?id=31812
Summary WebSocket code uses RefPtr::get() where it shouldn't
Alexey Proskuryakov
Reported 2009-11-23 13:50:13 PST
There is no need to get() when comparing RefPtrs.
Attachments
proposed patch (4.59 KB, patch)
2009-11-23 13:51 PST, Alexey Proskuryakov
oliver: review+
Alexey Proskuryakov
Comment 1 2009-11-23 13:51:31 PST
Created attachment 43733 [details] proposed patch
Oliver Hunt
Comment 2 2009-11-23 13:52:05 PST
Comment on attachment 43733 [details] proposed patch r=me!
Alexey Proskuryakov
Comment 3 2009-11-23 13:54:34 PST
Committed revision 51317.
Note You need to log in before you can comment on or make changes to this bug.