        Reviewed by Oliver Hunt.

https://bugs.webkit.org/show_bug.cgi?id=31812
        WebSocket code uses RefPtr::get() where it shouldn't

        No change in funcitonality, just coding style correction.

        * websockets/WebSocket.cpp:
        (WebCore::WebSocket::~WebSocket):
        * websockets/WebSocketChannel.cpp:
        (WebCore::WebSocketChannel::connect):
        (WebCore::WebSocketChannel::send):
        (WebCore::WebSocketChannel::bufferedAmount):
        (WebCore::WebSocketChannel::close):
        (WebCore::WebSocketChannel::disconnect):
        (WebCore::WebSocketChannel::didOpen):
        (WebCore::WebSocketChannel::didClose):
        (WebCore::WebSocketChannel::didReceiveData):
        (WebCore::WebSocketChannel::didFail):



Canonical link: https://commits.webkit.org/42746@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51317 268f45cc-cd09-0410-ab3c-d52691b4dbfc